--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -244,6 +244,18 @@ article .markdown ol {
   scrollbar-color: var(--color-gray-200) transparent;
 }
 
+/* Release page title style */
+.release-page article > header h2 {
+  font-size: 52px !important;
+  font-weight: 200 !important;
+  line-height: 64px !important;
+  letter-spacing: -2% !important;
+}
+
+.release-page article > header h2 a {
+  color: white !important;
+}
+
 /* Release page specific styles */
 .release-page aside.col {
   display: none !important;
